[package]
name = "pdfg-rs"
version = "0.1.0"
edition = "2021"
descriptioon = "Podcast Feed Generator"
repo = "https://github.com/deep60/pdfg-rs"
authors = ["P Deepanshu <deep6060p@gmail.com>"]
readme = "./README.md"

categories = []
license = "MIT OR Apache-2.0"

[dependencies]
chrono = "0.4.39"
derive = "1.0.0"
rss = "2.0.11"
serde = "1.0.217"
toml = "0.8.19"
xml = "0.8.20"

[dependecies.serde]
version = "1.0.118"
features = ["derive"]
